# abk

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
docs/: ISSUE-declarative-cli-extraction.md  checkpoint-format.md  extension-development.md
src/: lib.rs
src/agent/: checkpoint_utils.rs  context_impl.rs  context_orch.rs  llm.rs  mcp.rs  mod.rs  session.rs  tools.rs  traits.rs  types.rs
src/checkpoint/: agent_context.rs  atomic.rs  cleanup.rs  config.rs  errors.rs  mod.rs  models.rs  restoration.rs  resume_tracker.rs  session_manager.rs  size_calc.rs  storage.rs  utils.rs
src/checkpoint/backend/: documentdb_backend.rs  file_backend.rs  mod.rs  traits.rs
src/checkpoint/v2/: events_log.rs  mod.rs  schemas.rs  storage_v2.rs
src/cli/: config.rs  error.rs  mod.rs  runner.rs  utils.rs
src/cli/adapters/: checkpoint.rs  context.rs  mod.rs  provider.rs  storage.rs  tools.rs
src/cli/commands/: cache.rs  checkpoints.rs  config.rs  extension.rs  init.rs  mcp.rs  misc.rs  mod.rs  resume.rs  run.rs  sessions.rs
src/cli/declarative/: adapters.rs  builder.rs  config.rs  error.rs  executor.rs  mod.rs  router.rs
src/cli/integrations/: mod.rs
src/cli/test_utils/: mocks.rs  mod.rs
src/config/: config.rs  environment.rs  mod.rs
src/executor/: mod.rs  tests.rs
src/extension/: bindings.rs  error.rs  loader.rs  manifest.rs  mod.rs  registry.rs
src/invoker/: adapter.rs  definition.rs  error.rs  mod.rs  registry.rs  source.rs
src/lifecycle/: mod.rs
src/observability/: logger.rs  mod.rs
src/observability/logger/: tests.rs
src/orchestration/: agent_orchestration.rs  agent_session.rs  mod.rs  output.rs  runtime.rs  tools.rs  workflow.rs
src/provider/: extension.rs  factory.rs  mod.rs  traits.rs
src/provider/adapters/: chatml.rs  mod.rs  tools.rs
src/provider/openai/: client.rs  messages.rs  mod.rs  request.rs  response.rs  sse.rs  tools.rs
src/provider/types/: generate.rs  internal.rs  mod.rs  tools.rs
src/provider/wasm/: mod.rs
src/registry/: client.rs  error.rs  factory.rs  mcp.rs  mcp_source.rs  mod.rs  native_source.rs  provider.rs  registered.rs  registry.rs  source_kind.rs  unified.rs
tests/: documentdb_integration.rs  extension_integration_test.rs  orchestration_integration_test.rs
tests/fixtures/test-extension/: extension.toml
wit/: README.md
wit/extension/: provider.wit
wit/lifecycle/: lifecycle.wit
wit/provider/: provider.wit
